# webp-parser

./: .gitignore  CMakeLists.txt  Dockerfile  README  bindings.idl  common.h  cwrap_functions.c  docker-compose.yml  main_header.h  package.json  webp.h
builds/: webp-parser.wasm.js  webp-parser.wasm.wasm
builds/webpdec-src/: Makefile  cmake_install.cmake
dsp/: lossless.h
enc/: picture_enc.c
examples/: index.html
examples/WEBP/: README  index.html  package.json  webp-decoder.js  webp.c
examples/WEBP/SWprison/: sw.js
examples/js/: app.js  webp-parser.js  webp-parser.wasm.js  webp-parser.wasm.wasm  webpParser.wasm.js  webpParser.wasm.wasm  workerController.js
imageio/: image_dec.h  webpdec.c  webpdec.h
utils/: utils.c  utils.h
webp/: encode.h
webpdec-src/: CMakeLists.txt
webpdec-src/dec/: io_dec.c  vp8l_dec.c
webpdec-src/dsp/: cpu.c  dsp.h
webpdec-src/imageio/: image_dec.c
